.devops/k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medisynth-api
  namespace: medisynth-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medisynth-api
  template:
    metadata:
      labels:
        app: medisynth-api
        component: api
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: medisynth-api
          image: ghcr.io/medisynth-io/medisynth-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2048Mi"
              cpu: "5000m"
          livenessProbe:
            httpGet:
              path: /heartbeat
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /heartbeat
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
