.devops/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medisynth-api-deployment
  namespace: medisynth-io
  labels:
    app: medisynth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medisynth-api
  template:
    metadata:
      labels:
        app: medisynth-api
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - name: medisynth-api
        image: ghcr.io/medisynth-io/medisynth:latest
        ports:
        - containerPort: 8081 
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /heartbeat
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /heartbeat
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
