.devops/k8s/base/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medisynth-portal
  namespace: medisynth-io
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medisynth-portal
  template:
    metadata:
      labels:
        app: medisynth-portal
        component: portal
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: medisynth-portal
          image: ghcr.io/medisynth-io/medisynth-portal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: medisynth-config
