.devops/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medisynth-api-svc
  namespace: medisynth-io
  labels:
    app: medisynth-io
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: http
  selector:
    app: medisynth-io
    tier: backend
    component: api
