.devops/k8s/base/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medisynth-portal-svc
  namespace: medisynth-io
spec:
  selector:
    app: medisynth-io
  ports:
    - name: portal-http
      protocol: TCP
      port: 80
      targetPort: 8082
