.devops/k8s/base/postgres-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: medisynth-postgres-rw
  namespace: medisynth-io
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    cnpg.io/cluster: medisynth-postgres
    role: primary
