.devops/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medisynth-api-svc
  namespace: medisynth-io
  labels:
    app: medisynth-io
spec:
  type: ClusterIP
  ports:
  - port: 80 
    targetPort: 8081 
    protocol: TCP
    name: http
  selector:
    app: medisynth-io
